// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`nested-code.md - {"embeddedLanguageFormatting":"auto"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "auto"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`markdown
This is markdown

~~~json
["json",
"in", "markdown", "in", "markdown"]
~~~
\`\`\`

\`\`\`unknown
text

~~~json
["json",
"in", "markdown", "in", "markdown"]
~~~
\`\`\`

\`\`\`markdown
This is markdown

~~~unknown
unknown
~~~
\`\`\`

=====================================output=====================================
\`\`\`\`markdown
This is markdown

\`\`\`json
["json", "in", "markdown", "in", "markdown"]
\`\`\`
\`\`\`\`

\`\`\`unknown
text

~~~json
["json",
"in", "markdown", "in", "markdown"]
~~~
\`\`\`

\`\`\`\`markdown
This is markdown

\`\`\`unknown
unknown
\`\`\`
\`\`\`\`

================================================================================
`;

exports[`nested-code.md - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["markdown"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
\`\`\`markdown
This is markdown

~~~json
["json",
"in", "markdown", "in", "markdown"]
~~~
\`\`\`

\`\`\`unknown
text

~~~json
["json",
"in", "markdown", "in", "markdown"]
~~~
\`\`\`

\`\`\`markdown
This is markdown

~~~unknown
unknown
~~~
\`\`\`

=====================================output=====================================
\`\`\`markdown
This is markdown

~~~json
["json",
"in", "markdown", "in", "markdown"]
~~~
\`\`\`

\`\`\`unknown
text

~~~json
["json",
"in", "markdown", "in", "markdown"]
~~~
\`\`\`

\`\`\`markdown
This is markdown

~~~unknown
unknown
~~~
\`\`\`

================================================================================
`;
